C'est calme, beaucoup trop calme

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,8 +40,10 @@
                                                         <h1>GLOSSAIRE</h1>
 
                                                       <!-- <form method="POST" class="form-inline"> -->
-                                                            <input id="search-sticker" class="form-control mr-1" type="search" placeholder="Search" aria-label="Search" name="searc">
+                                                            <div class="form-inline input-group-sm">
+                                                            <input id="search-sticker" class="form-control mr-1 " type="search" placeholder="Search" aria-label="Search" name="searc">
                                                             <button id="submit-sticker" class="btn btn-outline-success btn-sm m-1" onclick="var ndh=getElementById('search-sticker').value;window.location.href=`/glossary/${ndh}`">Search</button>
+                                                        </div>
                                                         <!-- </form> -->
 
                                                     </div>
