--- a/views/elements/word.ejs
+++ b/views/elements/word.ejs
@@ -2,10 +2,9 @@
 <div class="row pl-5">
 	<a href="/glossary/<%=mot.word%>"><p class="mot py-0 my-0">
 		<b><%=mot.word%></b> :
-		<%=mot.definition%>.
+		<%=mot.definition%>
 	</p></a>
 </div>
-
 
 <%# if(locals.candel){%>
 <!-- <form action="/glossary" method="POST">
