--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -29,3 +29,4 @@
     <%- include('../modals/connect')%>
         <%- include('../modals/register')%>
             <%- include('../modals/addword')%>
+            <%- include('../modals/editpost')%>
