--- a/views/elements/single_word.ejs
+++ b/views/elements/single_word.ejs
@@ -9,8 +9,8 @@
     </div>
 
     <div class="row ml-5">
-        <% links.forEach( link => { %> 
-            <%- include('./elements/link') %>
+        <% links.forEach( (link, index) => { %> 
+            <%- include('./link', link) %>
         <% }); %>
     </div>
 
