displaying links is op. But I forgot to add the function and requests to actualy create new links in the tab

--- a/views/elements/link.ejs
+++ b/views/elements/link.ejs
@@ -1,5 +1,5 @@
-<p>
-    <a href="<% link.href %>">
-        <% link.name %>
+<div class="row px-0">
+    <a href="<%= link.href %>" target="_blank">
+        <%= link.name %>
     </a>
-</p>
+</div>
