--- a/views/elements/single_word.ejs
+++ b/views/elements/single_word.ejs
@@ -9,10 +9,16 @@
     </div>
 
     <div class="row ml-5">
-        <%if(locals.link){%>
-        <% links.forEach( (link, index) => { %> 
-            <%- include('./link', link) %>
-        <% }); %><%}%>
+        <div class="col-12 px-0">
+            <b>Sources :</b>
+        </div>
+        <div class="col-12">
+            <%#if(locals.link){%>
+                <% links.forEach( link => { %>
+                    <%- include('./link', {link: link}) %>
+                        <% }); %>
+                            <%#}%>
+        </div>
     </div>
 
 
@@ -22,7 +28,7 @@
             <div class="input-group-prepend">
                 <div class="input-group-text" id="btnGroupAddon">XXX Likes</div>
             </div>
-            <button class="btn btn-success" name="like" value="<%=mot.word%>" onclick="likethis("<%=mot.word%>")">
+            <button class="btn btn-success" name="like" value="<%=mot.word%>" onclick="likethis(" <%=mot.word%>")">
                 <i class="fas fa-thumbs-up"></i>
             </button>
         </div>
@@ -31,7 +37,8 @@
         <a href="#" data-toggle="modal" data-target="#modalEditpost">
             <button class="btn btn-warning" name="edit" value="<%=mot.word%>">
                 <i class="fas fa-edit"></i>
-            </button></a>
+            </button>
+        </a>
 
         <form action="/glossary" method="POST">
             <button class="btn btn-danger" name="deleted" type="submit" value="<%=mot.word%>">
