added a modal window to add a link to a definition

--- a/views/elements/single_word.ejs
+++ b/views/elements/single_word.ejs
@@ -34,6 +34,12 @@
         </div>
         <!-- </form> -->
 
+        <a href="#" data-toggle="modal" data-target="#modalAddlink">
+            <button class="btn btn-success" name="edit" value="<%=mot.word%>">
+                <i class="fas fa-plus"></i>
+            </button>
+        </a>
+
         <a href="#" data-toggle="modal" data-target="#modalEditpost">
             <button class="btn btn-warning" name="edit" value="<%=mot.word%>">
                 <i class="fas fa-edit"></i>
