--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -29,4 +29,5 @@
     <%- include('../modals/connect')%>
         <%- include('../modals/register')%>
             <%- include('../modals/addword')%>
-            <%- include('../modals/editpost')%>
+                <%- include('../modals/addlink')%>
+                    <%- include('../modals/editpost')%>
