--- a/views/word.ejs
+++ b/views/word.ejs
@@ -8,10 +8,7 @@
             <div class="col-lg-2"></div>
 
             <div class="paper col-lg-8 pl-0 pr-4">
-                <div class="hard-cover">
-
-
-                </div>
+                <!-- <div class="hard-cover"></div> -->
 
                 <div id="texture pr-4">
                 </div>
@@ -19,16 +16,13 @@
                 <div class="lines">
                     <div class="lines2"></div>
 
-
                     <div id="glossary">
 
                         <!-- <div class="inner-hard-cover"></div> -->
                         <!-- <div id="" class="hard-cover frontc"><div class="etiquette"></div></div> -->
 
-                        <header class="row pb-5">
-
-                        </header>
-                        <div id="content" class="row">
+                        <header class="row pb-5"></header>
+                        <div id="" class="row pb-5">
                             <%- include('./elements/single_word') %>
                         </div>
                         <!-- <footer class="row">
@@ -36,14 +30,13 @@
                             <p>Simplon 2018</p>
                             <p>Valentin, Christopher, Geoffrey, Vanessa</p>
                         </footer> -->
-
                     </div>
 
-                    <%- include('./elements/booklets') %>
+                    <%#- include('./elements/booklets') %>
 
                         <!-- <div class="inner-hard-cover"></div> -->
 
-                        <%- include('./elements/rings') %>
+                        <%#- include('./elements/rings') %>
 
 
                 </div>
