--- a/views/elements/single_word.ejs
+++ b/views/elements/single_word.ejs
@@ -19,6 +19,7 @@
                         <% }); %>
                             <%#}%>
         </div>
+        <%- include('../modals/addlink')%>
     </div>
 
 
