--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -5,21 +5,19 @@
 
     <header class="sticky-top m-0 p-0 text-light">
 
-        <nav class="navbar navbar-expand navbar-dark bg-dark p-0 m-0">
+        <nav class="navbar navbar-expand navbar-dark bg-dark p-0 m-0 justify-content-between">
 
-            <div class="d-flex justify-content-end mr-auto">
-                <a class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalConnect">Connect</a>
-                <a class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalRegister">Register</a>
+            <div class="d-flex justify-content-end">
+                <a class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalConnect">Log In <i class="fas fa-sign-in-alt"></i></a>
+                <a class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalRegister">Join <i class="fas fa-id-badge"></i></a>
             </div>
 
-            <div class="d-flex justify-content-end mx-auto">
-                <a class="nav-item ml-3" href="/glossary/">Glossary</a>
+            <div class="d-flex">
+                <a class="nav-item mt-2" href="/glossary/"><h4><i class="fas fa-book-open"></i></h4></a>
             </div>
-
-
 
             <a id="navbar-brand" class="navbar-brand" href="/">
-                <i>Simplon's Hitchiker's guide to Web</i>
+                <i>Simplon's Hitchiker's guide for Devs</i>
             </a>
 
         </nav>
