Like system and links system are working perfectly.. damned my boy. damned my goodness

--- a/views/elements/link.ejs
+++ b/views/elements/link.ejs
@@ -3,14 +3,15 @@
     <!-- <form action="/like" method="POST"> -->
     <div class="input-group input-group-sm">
 
-
         <div class="input-group-prepend">
-            <div class="input-group-text" id="btnGroupAddon">XXX Likes</div>
+            <div class="input-group-text" id="btnGroupAddon"><%= likes.length %> likes</div>
         </div>
-        <button class="btn btn-sm btn-success" name="like" value="<%=mot.word%>" onclick="likethis(" <%=mot.word%>")">
+        <button class="btn btn-sm btn-danger" onclick="trashthislink('<%=mot.word%>','<%= link.name %>')">
+            <i class="fas fa-trash-alt"></i>
+        </button>
+        <button class="btn btn-sm btn-success" onclick="likethis('<%=mot.word%>')">
             <i class="fas fa-thumbs-up"></i>
         </button>
-
 
         <a class="ml-5" href="<%= link.href %>" target="_blank">
             <i><%= link.name %></i>
