--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -17,7 +17,7 @@
             </div>
 
             <a id="navbar-brand" class="navbar-brand" href="/">
-                <i>Simplon's Hitchiker's guide for Devs</i>
+                <i>Simplon's Hitchiker's guide</i>
             </a>
 
         </nav>
