--- a/views/elements/single_word.ejs
+++ b/views/elements/single_word.ejs
@@ -26,19 +26,19 @@
     <div class="row ml-5">
 
         <a href="#" data-toggle="modal" data-target="#modalAddlink">
-            <button class="btn btn-success" name="edit" value="<%=mot.word%>">
+            <button class="btn btn-sm btn-success" name="edit" value="<%=mot.word%>">
                 <i class="fas fa-plus"></i>
             </button>
         </a>
 
         <a href="#" data-toggle="modal" data-target="#modalEditpost">
-            <button class="btn btn-warning" name="edit" value="<%=mot.word%>">
+            <button class="btn btn-sm btn-warning" name="edit" value="<%=mot.word%>">
                 <i class="fas fa-edit"></i>
             </button>
         </a>
 
         <form action="/glossary" method="POST">
-            <button class="btn btn-danger" name="deleted" type="submit" value="<%=mot.word%>">
+            <button class="btn btn-sm btn-danger" name="deleted" type="submit" value="<%=mot.word%>">
                 <i class="fas fa-trash-alt"></i>
             </button>
         </form>
