strangely a merge erased a part of le connect scrit. I'm currently fixing it and working on custom display for connected users

--- a/views/elements/word.ejs
+++ b/views/elements/word.ejs
@@ -2,7 +2,7 @@
 <div class="row pl-5">
 	<a href="/glossary/<%=mot.word%>"><p class="mot py-0 my-0">
 		<b><%=mot.word%></b> :
-		<%=mot.definition%>
+		<%#=mot.definition%>
 	</p></a>
 </div>
 
