--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -8,9 +8,9 @@
         <nav class="navbar navbar-expand navbar-dark bg-dark p-0 m-0 justify-content-between">
 
             <div class="d-flex justify-content-end">
-                <a id="user_login" class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalConnect">Log In <i class="fas fa-sign-in-alt"></i></a>
-                <a id="user_join" class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalRegister">Join <i class="fas fa-id-badge"></i></a>
-                <a id="user_logout" class="nav-item ml-3" href="#" onclick="logout()">Log Out <i class="fas fa-sign-out-alt"></i></a>
+                <a id="header_button_login" class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalConnect">Log In <i class="fas fa-sign-in-alt"></i></a>
+                <a id="header_button_join" class="nav-item ml-3" href="#" data-toggle="modal" data-target="#modalRegister">Join <i class="fas fa-id-badge"></i></a>
+                <a id="header_button_logout" class="nav-item ml-3" href="#" onclick="logout()">Log Out <i class="fas fa-sign-out-alt"></i></a>
             </div>
 
             <div class="d-flex">
