reglements de comptes avec node, je commence a comprendre mon adversaire

--- a/views/elements/word.ejs
+++ b/views/elements/word.ejs
@@ -1,7 +1,7 @@
 <%wword.forEach((mot) => {%>
 <div class="row pl-5">
 	<a href="/glossary/<%=mot.word%>"><p class="mot py-0 my-0">
-		<b><%=mot.word%></b> :
+		<b><%=mot.word%></b>
 		<%#=mot.definition%>
 	</p></a>
 </div>
