fixed the buttons layout on modals

--- a/views/modals/addword.ejs
+++ b/views/modals/addword.ejs
@@ -8,7 +8,7 @@
                 <form class="d-flex flex-column" action="/ajout" method="POST">
                     <input name="add_word" type="text" placeholder="word">
                     <textarea name="add_definition" id="" cols="30" rows="10" placeholder="definition"></textarea>
-                    <button class="btn" type="submit">Add this word</button>
+                    <button class="btn btn-info" type="submit">Add this word</button>
                 </form>
             </div>
             <div class="modal-footer">
