--- a/views/modals/addlink.ejs
+++ b/views/modals/addlink.ejs
@@ -9,7 +9,7 @@
                         <input name="add_linkitem" type="text" value="<%= mot.word %>">
                         <input name="add_linkname" type="text" placeholder="Title of your link">
                         <input name="add_link" type="text" placeholder="http//yourlink.com">
-                        <button class="btn" type="submit">Add this source</button>
+                        <button class="btn btn-info" type="submit">Add this source</button>
                     </form>
                 </div>
                 <div class="modal-footer">
