--- a/views/modals/connect.ejs
+++ b/views/modals/connect.ejs
@@ -9,7 +9,7 @@ aria-hidden="true">
             <form class="d-flex flex-column" action="/connect" method="POST">
                 <input class="" name="connect_username" type="text" placeholder="username">
                 <input class="" name="connect_password" type="password" placeholder="password">
-                <button class="btn" type="submit">Connect</button>
+                <button class="btn btn-info" type="submit">Connect</button>
             </form>
         </div>
         <div class="modal-footer">
