--- a/views/modals/editpost.ejs
+++ b/views/modals/editpost.ejs
@@ -7,7 +7,7 @@
             <div class="modal-content">
                 <form class="d-flex flex-column" action="/edit" method="POST">
                     <textarea name="editpost" id="" cols="30" rows="10" placeholder="definition"></textarea>
-                    <button class="btn" type="submit">Edit this post</button>
+                    <button class="btn btn-info" type="submit">Edit this post</button>
                 </form>
             </div>
             <div class="modal-footer">
