--- a/views/modals/register.ejs
+++ b/views/modals/register.ejs
@@ -9,7 +9,7 @@
                     <input name="register_username" type="text" placeholder="username">
                     <input name="register_email" type="email" placeholder="email">
                     <input name="register_password" type="password" placeholder="password">
-                    <button type="submit">Register</button>
+                    <button class="btn btn-info" type="submit">Register</button>
                 </form>
             </div>
             <div class="modal-footer">
