--- a/views/elements/booklets.ejs
+++ b/views/elements/booklets.ejs
@@ -15,7 +15,9 @@
     px-3 py-2
     text-center">
     <a <%if(index==0) {%>
+        <%if(status!='visitor'){%>
         href="#" data-toggle="modal" data-target="#modalAddword">
+        <%}%>
         <%}else {%>
         href="/lettre/<%=items%>"><%}%>
         <%=items%>
