--- a/views/elements/single_word.ejs
+++ b/views/elements/single_word.ejs
@@ -10,11 +10,13 @@
 
     <div class="row ml-5">
         <div class="col-12 px-0">
+            <%if(status!='visitor'){%>
             <a href="#" data-toggle="modal" data-target="#modalAddlink">
                 <button class="btn btn-sm btn-success" name="new" value="<%=mot.word%>">
                     <i class="fas fa-plus"></i>
                 </button>
             </a>
+            <%}%>
             <b>Sources :</b>
         </div>
         <div class="col-12">
@@ -29,7 +31,7 @@
 
 
     <div class="row ml-5">
-
+<%if(status!='visitor'){%>
         <a href="#" data-toggle="modal" data-target="#modalEditpost">
             <button class="btn btn-sm btn-warning" name="edit" value="<%=mot.word%>">
                 <i class="fas fa-edit"></i>
@@ -41,5 +43,6 @@
                 <i class="fas fa-trash-alt"></i>
             </button>
         </form>
+        <%}%>
     </div>
 </div>
