--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -10,9 +10,9 @@
             <div class="d-flex justify-content-end">
                 <a class="nonco nav-item ml-3" href="#" data-toggle="modal" data-target="#modalConnect">Log In <i class="fas fa-sign-in-alt"></i></a>
                 <a class="nonco nav-item ml-3" href="#" data-toggle="modal" data-target="#modalRegister">Join <i class="fas fa-id-badge"></i></a>
-                <%if(status!='visitor'){%>
+                <!-- <%if(status!='visitor'){%> -->
                 <a class="forco nav-item ml-3" href="#" onclick="logout()">Log Out <i class="fas fa-sign-out-alt"></i></a>
-                <%}%>
+                <!-- <%}%> -->
             </div>
 
             <div class="d-flex">
