--- a/views/elements/booklets.ejs
+++ b/views/elements/booklets.ejs
@@ -15,7 +15,7 @@
     px-3 py-2
     text-center">
     <a <%if(index==0) {%>
-        href="#" data-toggle="modal" data-target="#modalAddword">
+        class="forco" href="#" data-toggle="modal" data-target="#modalAddword">
         <%}else {%>
         href="/lettre/<%=items%>"><%}%>
         <%=items%>
