--- a/views/elements/single_word.ejs
+++ b/views/elements/single_word.ejs
@@ -10,7 +10,7 @@
 
     <div class="row ml-5">
         <div class="col-12 px-0">
-            <a href="#" data-toggle="modal" data-target="#modalAddlink">
+            <a class="forco" href="#" data-toggle="modal" data-target="#modalAddlink">
                 <button class="btn btn-sm btn-success" name="new" value="<%=mot.word%>">
                     <i class="fas fa-plus"></i>
                 </button>
@@ -29,14 +29,14 @@
 
 
     <div class="row ml-5">
-        <a href="#" data-toggle="modal" data-target="#modalEditpost">
+        <a class="forco" href="#" data-toggle="modal" data-target="#modalEditpost">
             <button class="btn btn-sm btn-warning" name="edit" value="<%=mot.word%>">
                 <i class="fas fa-edit"></i>
             </button>
         </a>
 
         <form action="/glossary" method="POST">
-            <button class="btn btn-sm btn-danger" name="deleted" type="submit" value="<%=mot.word%>">
+            <button class="forco" class="btn btn-sm btn-danger" name="deleted" type="submit" value="<%=mot.word%>">
                 <i class="fas fa-trash-alt"></i>
             </button>
         </form>
