retrait de code déprecié

--- a/views/modals/addword.ejs
+++ b/views/modals/addword.ejs
@@ -7,7 +7,7 @@
             <div class="modal-content">
                 <form class="d-flex flex-column" action="/ajout" method="POST">
                     <input name="add_word" type="text" placeholder="word">
-                    <textarea name="add_definition" id="" cols="30" rows="10" placeholder="definition"></textarea>
+                    <textarea name="add_definition"  cols="30" rows="10" placeholder="definition"></textarea>
                     <button class="btn btn-info" type="submit">Add this word</button>
                 </form>
             </div>
