--- a/views/modals/editpost.ejs
+++ b/views/modals/editpost.ejs
@@ -6,7 +6,7 @@
             </div>
             <div class="modal-content">
                 <form class="d-flex flex-column" action="/edit" method="POST">
-                    <textarea name="editpost" id="" cols="30" rows="10" placeholder="definition"></textarea>
+                    <textarea name="editpost" cols="30" rows="10" placeholder="definition"></textarea>
                     <button class="btn btn-info" type="submit">Edit this post</button>
                 </form>
             </div>
