--- a/views/parts/footer.ejs
+++ b/views/parts/footer.ejs
@@ -4,16 +4,13 @@
 </div>
 
 
-
+<script
+src="https://code.jquery.com/jquery-3.3.1.min.js"
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-  crossorigin="anonymous"></script>
-<script src="frameworks/jquery.js"></script>
-<script src="frameworks/jquery-ui.js"></script>
+crossorigin="anonymous"></script>
 <script src="frameworks/bootstrap/js/bootstrap.js"></script>
-<script src="frameworks/socket.io.js"></script>
-<script src="frameworks/p5/p5.js"></script>
-<script src="frameworks/p5/addons/p5.dom.js"></script>
-
 <script src="js/scripts.js"></script>
 
 </body>
