--- a/views/parts/head.ejs
+++ b/views/parts/head.ejs
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="frameworks/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="frameworks/bootstrap/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="frameworks/jquery-ui.css"> -->
 
     <link rel="stylesheet" href="css/main.css">
