--- a/views/parts/head.ejs
+++ b/views/parts/head.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="frameworks/bootstrap/css/bootstrap.css">
     <!-- <link rel="stylesheet" href="frameworks/jquery-ui.css"> -->
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css" media="all">
     <link rel="shortcut icon" type="image/png" href="img/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Swanky+and+Moo+Moo" rel="stylesheet">
 
