--- a/views/parts/head.ejs
+++ b/views/parts/head.ejs
@@ -18,6 +18,8 @@
     <link rel="shortcut icon" type="image/png" href="img/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Swanky+and+Moo+Moo" rel="stylesheet">
 
+     <link rel = "manifest" href = "manifest.json"> <!-- ajout du manisfest.json-->
+
 </head>
 
 <body class="p-0 m-0">
