label and title input and button

--- a/views/elements/word.ejs
+++ b/views/elements/word.ejs
@@ -1,6 +1,6 @@
 <%wword.forEach((mot) => {%>
 <div class="row pl-5">
-	<a href="/glossary/<%=mot.word%>"><p class="mot py-0 my-0">
+	<a title="Show word" href="/glossary/<%=mot.word%>"><p class="mot py-0 my-0">
 		<b><%=mot.word%></b>
 		<%#=mot.definition%>
 	</p></a>
