--- a/views/elements/link.ejs
+++ b/views/elements/link.ejs
@@ -5,10 +5,10 @@
         <div class="input-group-prepend">
             <div class="input-group-text" id="btnGroupAddon"><%= likes.length %> likes</div>
         </div>
-        <button class="forco btn btn-sm btn-danger" onclick="trashthislink('<%=mot.word%>','<%= link.name %>')">
+        <button class="forco btn btn-sm btn-danger" title="Delete source" onclick="trashthislink('<%=mot.word%>','<%= link.name %>')">
             <i class="fas fa-trash-alt"></i>
         </button>
-        <button class="forco btn btn-sm btn-success" onclick="likethis('<%=mot.word%>')">
+        <button class="forco btn btn-sm btn-success" title="Like" onclick="likethis('<%=mot.word%>')">
             <i class="fas fa-thumbs-up"></i>
         </button>
         <a class="ml-5" href="<%= link.href %>" target="_blank">
