--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -11,10 +11,10 @@
             </div>
 
             <div class="d-flex">
-                <a class="nav-item mt-2" title="Home" href="/glossary/"><h4><i class="fas fa-book-open"></i></h4></a>
+                <a class="nav-item mt-2" title="Open glossary" href="/glossary/"><h4><i class="fas fa-book-open"></i></h4></a>
             </div>
 
-            <a id="navbar-brand" class="navbar-brand" href="/">
+            <a id="navbar-brand" class="navbar-brand" title="Home" href="/">
                 <i>Simplon's Hitchiker's guide</i>
             </a>
 
