--- a/views/modals/addword.ejs
+++ b/views/modals/addword.ejs
@@ -1,4 +1,5 @@
-<div class="modal fade text-dark" id="modalAddword" tabindex="-1" role="dialog" aria-labelledby="modalRegisterTitle" aria-hidden="true">
+<div class="modal fade text-dark" id="modalAddword" tabindex="-1" role="dialog" aria-labelledby="modalRegisterTitle"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -7,7 +8,7 @@
             <div class="modal-content">
                 <form class="d-flex flex-column" action="/ajout" method="POST">
                     <input name="add_word" type="text" placeholder="word">
-                    <textarea name="add_definition"  cols="30" rows="10" placeholder="definition"></textarea>
+                    <textarea name="add_definition" cols="30" rows="10" placeholder="definition"></textarea>
                     <button class="btn btn-info" type="submit">Add this word</button>
                 </form>
             </div>
