--- a/views/parts/footer.ejs
+++ b/views/parts/footer.ejs
@@ -1,15 +1,19 @@
 <footer class="mt-auto text-light bg-dark">
+
+    <!-- <footer class="row">-->
+    <img src="img/logo.png" id="logoSimplon" alt="logoSimplon">
+    <p>Simplon 2018</p>
+    <p>Valentin, Christopher, Geoffrey, Vanessa</p>
+    <!--</footer> -->
 </footer>
 
 </div>
 
 
-<script
-src="https://code.jquery.com/jquery-3.3.1.min.js"
-integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 <script src="frameworks/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
