--- a/views/parts/head.ejs
+++ b/views/parts/head.ejs
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#FF9800">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simplon's Hitchiker's guide</title>
 
@@ -18,7 +19,7 @@
     <link rel="shortcut icon" type="image/png" href="img/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Swanky+and+Moo+Moo" rel="stylesheet">
 
-     <link rel = "manifest" href = "manifest.json"> <!-- ajout du manisfest.json-->
+    <link rel="manifest" href="manifest.json"> <!-- ajout du manisfest.json-->
 
 </head>
 
